<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vote</string>
    <string name="action_settings">Settings</string>
    <string name="info">Info</string>
    <string name="about">About us</string>
    <string name="survey">My surveys</string>
    <string name="new_survey">+</string>
    <string name="others">Vote for others</string>
    <string name="title_activity_activity_info">ActivityInfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">Back to main screen</string>
    <string name="title_activity_activity_about">ActivityAbout</string>
    <string name="title_activity_activity_survey">ActivitySurvey</string>
    <string name="TextNew">Create new one</string>
    <string name="title_activity_activity_new_survey">ActivityNewSurvey</string>
    <string name="name">Surveys name: </string>
    <string name="startd">Start Date: </string>
    <string name="startt">Start Time: </string>
    <string name="endd">End Date: </string>
    <string name="endt">End Time: </string>
    <string name="keywords">Keywords: </string>
    <string name="create">Create </string>
    <string name="title_activity_activity_new_questions">Activity_new_questions</string>
    <string name="title_activity_activity_new_question">ActivityNewQuestion</string>
    <string name="addQuest">Add Question </string>
    <string name="title_activity_activity_add_question">ActivityAddQuestion</string>
    <string name="quest">Question: </string>
    <string name="answType">Answer Type: </string>

    <string-array name="answ_opt">
        <item>Radio button </item>
        <item>Checkbox</item>
    </string-array>

    <string name="questionType">Type: </string>

    <string-array name="question_type_options">
        <item>Single choice</item>
        <item>Multiple choice</item>
        <item>Raw answer</item>
    </string-array>

    <string name="done">Done </string>
    <string name="finish">Finish</string>
    <string name="my_new_survey">My new survey</string>
    <string name="local">Local</string>
    <string name="global">Global</string>
    <string name="plus">+</string>
    <string name="answ1">Answer 1: </string>
    <string name="answ2">Answer 2: </string>
    <string name="hash_code">Hash code:  </string>
    <string name="type">Type:  </string>
    <string name="questions">Show questions: </string>
    <string name="stop_survey">Stop Survey</string>
    <string name="title_activity_show_all_survays">ShowAllSurvays</string>
    <string name="title_activity_show_by_hash_code">ShowByHashCode</string>
    <string name="title_activity_show_by_keyword">ShowByKeyword</string>
    <string name="title_activity_filling_survey">FillingSurvey</string>
    <string name="info_full">Task of the "Vote Application" - create voting application, in which users can create their own survey, fill surveys that are created by others and see results on there survey, after it is finished.</string>
    <string name="about_full">Pavol Dano, Liene Bērze</string>
    <string name="creator_id">Creator ID:</string>
    <string name="example_question">How old are you?</string>
    <string name="example_answer_young">Under 18</string>
    <string name="example_answer_older">18+</string>
    <string name="btn_create_questions">Create questions</string>
    <string name="title_activity_activity_surveys_by_keywords">ActivitySurveysByKeywords</string>
    <string name="title_activity_graph">Statistics</string>
    <string name="go_back">Go back</string>
    <string name="tv_surves_found">Surveys found:</string>
    <string name="btw_return_value">Return</string>
    <string name="send_survey">Send survey</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_stats">Statistics</string>

</resources>
