<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="selectDate"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityNewSurvey" >

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/create" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btn_create"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignTop="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10" />

    <RadioButton
        android:id="@+id/radio0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/editText1"
        android:checked="true"
        android:text="RadioButton" />

    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/radio0"
        android:layout_alignBottom="@+id/radio0"
        android:layout_alignRight="@+id/editText6"
        android:layout_marginRight="14dp"
        android:text="RadioButton" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:paddingTop="15dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignRight="@+id/btn_create"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_create"
        android:layout_alignLeft="@+id/textView4"
        android:layout_marginBottom="21dp"
        android:text="@string/keywords" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText3"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignLeft="@+id/text_StartDate"
        android:text="@string/startt" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText4"
        android:layout_alignBottom="@+id/editText4"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/endd" />

    <TextView
        android:id="@+id/text_StartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radio0"
        android:layout_alignTop="@+id/editText2"
        android:text="@string/startd" />

    <Button
        android:id="@+id/btn_EndDate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText4"
        android:layout_alignBottom="@+id/editText4"
        android:layout_toLeftOf="@+id/editText4"
        android:onClick="selectDate2"
        android:text="+" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText6"
        android:layout_alignLeft="@+id/textView3"
        android:layout_marginBottom="15dp"
        android:text="@string/endt" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_StartDate"
        android:layout_toRightOf="@+id/btn_StartDate"
        android:ems="10"
        android:inputType="date"
        android:width="250dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_StartDate"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/btn_StartDate"
        android:ems="10"
        android:inputType="time"
        android:paddingBottom="10dp" />

    <Button
        android:id="@+id/btn_StartDate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/radio0"
        android:layout_below="@+id/radio0"
        android:layout_marginTop="20dp"
        android:onClick="selectDate"
        android:text="+" />

    <Button
        android:id="@+id/btn_StartTime"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText3"
        android:layout_toLeftOf="@+id/editText3"
        android:onClick="selectTime"
        android:text="+" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_below="@+id/btn_StartTime"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/editText4"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="time" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_EndTime"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText5"
        android:layout_alignBottom="@+id/editText5"
        android:layout_toLeftOf="@+id/editText5"
        android:text="+" />

</RelativeLayout>